--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/core": "^7.0.0-beta.40",
     "babel-jest": "^22.4.1",
     "babel-preset-env": "^1.6.1",
+    "husky": "^0.15.0-rc.8",
     "jest": "^22.4.2",
     "npm-run-all": "^4.1.2",
     "rollup": "^0.56.3"
@@ -41,5 +42,10 @@
     "presets": [
       "env"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run build && git add ./docs/build/client.js"
+    }
   }
 }
