--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "dependencies": {
     "lodash-es": "^4.17.5",
     "nodemon": "^1.17.1",
-    "pixi.js": "^4.7.0",
-    "rxjs": "^5.5.6"
+    "rxjs": "^6.0.0-alpha.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.40",
